<resources>
    <string name="app_name">BLETest_wx</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_characteristic">CharacteristicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="wn_action_settings">Settings</string>
    <string name="wn_connecting_equipment">连接设备</string>
    <string name="wn_single_day_blood_sugar">单日血糖血糖</string>
    <string name="wn_many_day_blood_sugar">多日血糖数据</string>
    <string name="wn_device_name">设备名称</string>
    <string name="wn_current_progress">当前进度为:</string>
    <string name="wn_connect_with_device">与设备连接</string>
    <string name="wn_disconnect_with_device">与设备断开</string>
    <string name="wn_blood_suger_set">血糖值(BG)设置</string>
    <string name="wn_cgm_device">CGM设备</string>
    <string name="wn_menu_scan">搜索</string>
    <string name="wn_menu_stop">停止</string>
    <string name="wn_title_devices">搜索设备</string>
    <string name="wn_unknown_device">未知设备</string>
    <string name="wn_before_breakfast">早餐前</string>
    <string name="wn_after_breakfast">早餐后</string>
    <string name="wn_before_lunch">午餐前</string>
    <string name="wn_after_lunch">午餐后</string>
    <string name="wn_before_dinner">晚餐前</string>
    <string name="wn_after_dinner">晚餐后</string>
    <string name="wn_nighttime">夜间</string>
    <string name="wn_view_graph">查看曲线图</string>
    <string name="wn_many_days_blood_suger">多日血糖</string>
    <string name="wn_one_day_blood_suger">单日血糖</string>
    <string name="wn_one_day_data">至少选择一天查看</string>
    <string name="wn_system_busy">抱歉，系统繁忙，请稍后重试</string>
    <string name="wn_device">设备</string>
    <string name="wn_init_time">初始化时间</string>
    <string name="wn_save">保存</string>
    <string name="wn_please_fill_in_the_bg_value">请填写BG值</string>
    <string name="wn_measured_bg_time_is">测量BG时间为</string>
    <string name="wn_measurement_of_blood_glucose_values_in_the_time_period">测量血糖值所处的时间段</string>
    <string name="wn_history_record">历史记录</string>
    <string name="wn_blood_suger_value">血糖值</string>
    <string name="wn_no_null">不能为空</string>
    <string name="wn_blood_suger_time">测试时间</string>
    <string name="wn_blood_suger_range">血糖数值范围1.1-33.3</string>
    <string name="wn_blood_suger_range_big">血糖数值范围19.8-599.4</string>
    <string name="wn_select_the_time_should_be_in">选择时间应当在</string>
    <string name="wn_between_the_current_time">和当前时间之间</string>
    <string name="wn_can_not_mroe_now_time">时间不能超过当前时间</string>
    <string name="wn_afternoon">下午</string>
    <string name="wn_morning">上午</string>
    <string name="wn_save_succsess">保存成功</string>
    <string name="wn_my_cgm">我的CGM</string>
    <string name="wn_has_been_connected_to_the_device">已与设备连接</string>
    <string name="wn_disconnect_connection">断开连接</string>
    <string name="wn_data_retransmission">数据重传中，请勿退出该界面...</string>
    <string name="wn_repeat_pass">重传完毕</string>
    <string name="wn_the_sync_data_is_not_more_than_three_minutes">离上次同步数据未超过三分钟，请三分钟后重试</string>
    <string name="wn_tie_success">解绑成功</string>
    <string name="wn_ready_to_connect">准备连接中，请保持网络通畅...</string>
    <string name="wn_device_has_been_initialized">设备已经初始化</string>
    <string name="wn_equipment_is_initialized">设备正在初始化,预计完成时间为:</string>
    <string name="wn_device_not_initialized">尚未初始化设备</string>
    <string name="wn_please_make_sure_that_the_device">请确认该设备未与其他手机绑定</string>
    <string name="wn_not_connected_device">未连接设备</string>
    <string name="wn_disconnect_from_cgm_device">与CGM设备断开连接</string>
    <string name="wn_data_upload_is_completed">数据上传完毕</string>
    <string name="wn_unknown_service">Unknown service</string>
    <string name="wn_unknown_characteristic">Unknown characteristic</string>
    <string name="wn_blood_suger_list">血糖值(BG)列表</string>
    <string name="wn_blood_suger_bg">血糖值(BG)</string>
    <string name="wn_content_loading_completed">已经加载所有了</string>
    <string name="wn_null_picture">暂无图片</string>
    <string name="wn_null_content">暂无内容</string>
    <string name="wn_not">暂无</string>
    <string name="wn_blood_suger">血糖</string>
    <string name="wn_change_of_blood_glucose_concentration">血糖浓度变化</string>
    <string name="wn_value">值</string>
    <string name="wn_diet_record">饮食记录</string>
    <string name="wn_medication_record">用药记录</string>
    <string name="wn_sport_record">运动记录</string>
    <string name="wn_sleep_record">睡眠记录</string>
    <string name="wn_m_time">时</string>
    <string name="wn_m_branch">分</string>
    <string name="wn_make_sure">确认</string>
    <string name="wn_select_start_time">+选择开始时间</string>
    <string name="wn_select_end_time">+选择结束时间</string>
    <string name="wn_concentration">浓度(mmol/L)</string>
    <string name="wn_network_is_not_available">网络不可用</string>
    <string name="wn_connection_failed">连接失败，请重试</string>
    <string name="wn_look_more">查看更多</string>
    <string name="wn_release_can_be_refreshed">松开可以刷新</string>
    <string name="wn_pull_down_to_refresh">下拉可以刷新</string>
    <string name="wn_load_in">加载中...</string>
    <string name="wn_more">更多</string>
    <string name="wn_sure">确定</string>
    <string name="wn_event_empty">事件记录为空</string>
    <string name="wn_connect_error">网络异常，请稍后重试</string>
    <string name="wn_token_overtime">Token超时</string>
    <string name="wn_is_verification">APP未进行初始化或着用户绑定</string>
    <string name="wn_m_hormone_pump_equipment">激素泵设备</string>
    <string name="wn_m_my_equipment">我的设备</string>
    <string name="wn_p_ent_pump_bandle">请输入泵序列号以便于设备绑定</string>
    <string name="wn_p_product_num">产品序列号</string>
    <string name="wn_p_ent_hand_num">产品序列号</string>
    <string name="wn_p_product_style">产品泵型号</string>
    <string name="wn_p_ent_product_style">产品泵型号</string>
    <string name="wn_p_product_style_name">产品泵类型名称</string>
    <string name="wn_p_ent_product_style_name">产品泵类型名称</string>
    <string name="wn_p_next_foot">下一步</string>
    <string name="wn_p_open_bandle">泵设备的开通绑定</string>
    <string name="wn_p_user_style">用户类型</string>
    <string name="wn_p_user_single">个人</string>
    <string name="wn_p_buy_site">购买地点</string>
    <string name="wn_p_xx_pro">XX省XX市</string>
    <string name="wn_p_day">日</string>
    <string name="wn_p_pump_state_check">泵运行状态初始检查</string>
    <string name="wn_p_show">显示</string>
    <string name="wn_p_program">程序</string>
    <string name="wn_p_operation">操作</string>
    <string name="wn_p_buy_time">购买日期</string>
    <string name="wn_p_buy_provice">购买所在省</string>
    <string name="wn_p_implant_hospital">植入医院</string>
    <string name="wn_p_prescription_doctor">处方医生</string>
    <string name="wn_p_busness_name">经销商公司名称</string>
    <string name="wn_m_year">年</string>
    <string name="wn_month">月</string>
    <string name="wn_p_normal">正常</string>
    <string name="wn_p_unnomal">非正常</string>
    <string name="wn_p_trans">输注</string>
    <string name="wn_p_pump_bandle">泵绑定</string>
    <string name="wn_p_user_information">用户信息</string>
    <string name="wn_p_user_names">用户姓名</string>
    <string name="wn_p_no_user_information">暂无患者信息</string>
    <string name="wn_p_birth_daytime">出生年月</string>
    <string name="wn_p_treate_daytime">治疗开始年月日</string>
    <string name="wn_p_work_days">已工作天数</string>
    <string name="wn_p_find_history_data">查看历史数据</string>
    <string name="wn_p_sys_pump_data">同步泵数据</string>
    <string name="wn_p_sex">性别</string>
    <string name="wn_male">男</string>
    <string name="wn_female">女</string>
    <string name="wn_p_code_name">身份证号码</string>
    <string name="wn_p_user_home_tel">用户宅电</string>
    <string name="wn_p_unit_tel_other">单位电话或者其他</string>
    <string name="wn_wechat">微信</string>
    <string name="wn_email">邮箱</string>
    <string name="wn_p_zip_code">邮编</string>
    <string name="wn_p_other_homer">   家长/监护人/其他联系人    （如适用）</string>
    <string name="wn_p_name">姓名</string>
    <string name="wn_p_user_connect">与用户关系</string>
    <string name="wn_phone">手机</string>
    <string name="wn_p_communication">通讯地址</string>
    <string name="wn_p_birthday">出生日期</string>
    <string name="wn_p_tell_phone">电话</string>
    <string name="wn_p_comment">提交</string>
    <string name="wn_p_pump_work">泵工作记录</string>
    <string name="wn_p_pump_work_state">泵工作状态</string>
    <string name="wn_p_my_pump_data">我的泵数据</string>
    <string name="wn_p_pump_user_data">泵用户信息</string>
    <string name="wn_p_version_code">版本</string>
    <string name="wn_p_pump_synchronous">泵数据同步成功</string>
    <string name="wn_p_no_transmission">连接成功但不允许传输</string>
    <string name="wn_p_norecord">无次记录</string>
    <string name="wn_p_no_day_record">无日记录</string>
    <string name="wn_p_no_alerm_record">无报警记录</string>
    <string name="wn_p_no_user_info">暂无数据，请先同步数据后查看</string>
    <string name="wn_block">阻塞</string>
    <string name="wn_p_trans_record">输注记录</string>
    <string name="wn_p_days_record">日总记录</string>
    <string name="wn_p_alerm_record">报警记录</string>
    <string name="wn_p_trans_set">输注设置</string>
    <string name="wn_time">时间</string>
    <string name="wn_i_dose">剂量</string>
    <string name="wn_p_most_massive">最大量</string>
    <string name="wn_p_minimum_quantity">最小量</string>
    <string name="wn_p_average_value">平均值</string>
    <string name="wn_p_total">总量</string>
    <string name="wn_daily_record">日日总纪录</string>
    <string name="wn_to_make_electricity">电尽</string>
    <string name="wn_as_far_as_medicine">药尽</string>
    <string name="title_activity_wninsulin_work_status">WNInsulinWorkStatus</string>
    <string name="title_activity_wninsulin_pump">WNInsulinPump</string>
    <string name="w_insulin_pump">胰岛素泵</string>
    <string name="w_total_record">日总量纪录</string>
    <string name="w_large_pump">大剂量纪录</string>
    <string name="w_base_pump">基础量纪录</string>
    <string name="w_alarm_pump">报警纪录</string>
    <string name="w_insulin_info">泵信息</string>
    <string name="w_insulin_work_record">泵工作纪录</string>
    <string name="w_insulin_base_total">当日基础总量</string>
    <string name="w_insulin_large_total">日大剂量总量</string>
    <string name="w_base_ytpe_now">当前基础模式</string>
    <string name="w_base_rate_now">当前时段基础率</string>
    <string name="w_base_rate_already">当前时段已输注基础率</string>
    <string name="w_click_to_refresh">点击此处刷新</string>
    <string name="w_electric">电量</string>
    <string name="w_dose">药量</string>
    <string name="w_work_status">工作状态</string>
    <string name="w_infusion_switch">输注开关</string>
    <string name="w_synchronization_base_type">请先同步当前基础模式</string>
    <string name="w_update_at">更新于</string>
    <string name="w_electric_over">电用完</string>
    <string name="p_birthday">生日</string>
    <string name="p_alerm_record">报警记录</string>
    <string name="p_trans_record">输注记录</string>
    <string name="p_trans_set">输注设置</string>
    <string name="p_days_record">日总记录</string>
    <string name="p_sex">性别</string>
    <string name="p_name">姓名</string>
    <string name="p_treate_daytime">治疗开始年月日</string>
    <string name="p_work_days">已工作天数</string>
    <string name="p_most_massive">最大量</string>
    <string name="p_minimum_quantity">最小量</string>
    <string name="p_average_value">平均值</string>
    <string name="p_total">总量</string>
</resources>